<resources>
    <string name="app_name">StoreAds</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_my_favourite">Избранное</string>
    <string name="ad_def">Разное</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>

    <string name="ad_cat2">Аккаунт</string>
    <string name="remove_ads">Убрать рекламу</string>
    <string name="aс_sign_up">Регистрация</string>
    <string name="aс_sign_in">Вход</string>
    <string name="aс_sign_out">Выход</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Регистрация</string>
    <string name="sign_in_action">Вход по email</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти в аккаунт</string>
    <string name="send_verification_email_error">Ошибка отправки email для подверждения почты!
        Пожалуйста, попробуйте еще раз позднее</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подверждения
        аккаунта. Пожалуйста, подтвердите ваш аккаунт!</string>
    <string name="email_reset_password_was_sent">Ваш email адрес был успешно сброшен!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля, пожалуйста, введите ваш
    email адрес</string>
    <string name="sign_in_done">Вы успешно вошли по Google аккаунту!</string>
    <string name="exit_from_account">Вы вышли из аккаунта!</string>
    <string name="link_done">Ваш email успешно связан с Google аккаунтом</string>
    <string name="enter_to_google">Аккаунт с таким email адресом уже существует.
        Пожалуйста, войдите по Google аккаунту и зарегистрируйте ваш email.</string>
    <!-- Account Helper, Toast errors & exceptions -->
    <string name="error_invalid_email_or_password">Введен некорректный email или пароль! Пожалуйста,
    проверьте корректность email или пароля. Пароль должен содежать от 3 до 9 символов.</string>
    <string name="guest">Гость</string>
    <string name="google_sign_in_exception">Google Sign In Exception:</string>
    <string name="enter_guest_successfully">Вы вошли как гость</string>
    <string name="enter_guest_is_not_successfully">Не удалось войти как гость</string>
    <!-- City Helper -->
    <string name="no_result">Нет результата</string>
    <!-- Main Activity -->
    <string name="main_act_exception">Main Activity exception:</string>
    <string name="error_by_registration">Ошибка регистрации. Пожалуйста, попробуйте еще раз.</string>
    <string name="error_guest_publication">Пожалуйста, зарегистрируйтесь для публикации объявлений!</string>
    <!-- Edit Activity -->
    <string name="select_country">Выберите страну</string>
    <string name="select_city">Выберите город</string>
    <string name="country">*Страна</string>
    <string name="city">*Город</string>
    <string name="index">*Индекс</string>
    <string name="index_hint">Введите индекс</string>
    <string name="phone">*Телефон</string>
    <string name="phone_number">Введите номер телефона</string>
    <string name="email_desc_ed_act">Email адрес</string>
    <string name="email_input_ed_act">Введите ваш email адрес</string>
    <string name="no_country_selected">Страна не выбрана! Пожалуйста, выберите страну.</string>
    <string name="category">*Категория</string>
    <string name="title">*Заголовок объявления</string>
    <string name="title_hint">Укажите заголовок</string>
    <string name="select_category">Выбирите категорию</string>
    <string name="price">*Цена</string>
    <string name="price_hint">Укажите цену</string>
    <string name="description">*Описание</string>
    <string name="description_hint">Укажите описание</string>
    <string name="with_send">С отправкой</string>
    <string name="send">Отправка</string>
    <string name="publish">Опубликовать</string>
    <string name="need_fill_all_fields">Внимание! Все поля должны быть заполнены!</string>
    <!-- Db Manager -->
    <string name="firebase_error_load_data">Не удалось загрузить данные.
        Пожалуйста, попробуйте еще раз позднее</string>
    <string name="firebase_error_remove_ad">Произошла ошибка. Пожалуйста, повторите позже</string>
    <!-- Ad List Item -->
    <string name="price_desc">Цена:</string>
    <string name="currency_rub">руб</string>
    <!-- Toolbar title-->
    <string name="def_title">Разное</string>
    <string name="my_ads_title">Мои объявления</string>
    <!-- Bottom_main_menu -->
    <string name="new_ad">New Ad</string>
    <string name="my_ads">My Ads</string>
    <string name="favs">Favourites</string>
    <string name="home">Home</string>
    <!-- main_content -->
    <string name="empty">Пусто</string>
    <!-- Description Activity -->
    <string name="price_desc_act">Цена:</string>
    <string name="phone_desc_act">Телефрон:</string>
    <string name="email_desc_act">Email адрес:</string>
    <string name="country_desc_act">Страна:</string>
    <string name="city_desc_act">Город:</string>
    <string name="index_desc_act">Индекс:</string>
    <string name="with_send_desc_act">С отправкой?</string>
    <string name="with_sent_yes">Да</string>
    <string name="with_sent_no">Нет</string>
    <string name="tel_for_intent">tel:</string>
    <string name="text_intent_exception_email">На вашем устройстве нет приложения для отправки
        email. Пожалуйста установите приложение для отправки email и попробуйте снова.</string>
    <!-- Filter Activity -->
    <string name="filter_done">Применить фильтр</string>
    <string name="filter_clear">Очистить фильтр</string>
    <!-- AdsRcAdapter -->
    <string name="publish_time">Дата публикации:</string>
    <!-- BillingManager -->
    <string name="thanks_for_purchase">Спасибо за покупку!</string>
    <string name="not_released_purchase">Не удалось реализовать покупку!
        Пожалуйста попробуйте еще раз позже</string>
</resources>