<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/id_new_ads"
        android:orderInCategory="400"
        android:title="@string/new_ad"
        android:icon="@drawable/ic_new_ads"
        />
    <item
        android:id="@+id/id_my_ads"
        android:orderInCategory="300"
        android:title="@string/my_ads"
        android:icon="@drawable/ic_my_ads"
        />
    <item
        android:id="@+id/id_favs"
        android:orderInCategory="200"
        android:title="@string/favs"
        android:icon="@drawable/ic_fav_normal"
        />
    <item
        android:id="@+id/id_home"
        android:orderInCategory="100"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
</menu>